--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -35,7 +35,10 @@ h4 {
 
 /*banner customs*/
 .owl-carousel, .owl-wrapper-outer{
-	max-height: 700px;
+	max-height: 60vh;
+}
+.slider-content.vmiddle{
+	top: 35%;
 }
 
 /*Institute Name*/
