--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -460,6 +460,13 @@ small.small {
     padding-right:0;
     padding-left:0;
 }
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+.text-centered{
+	text-align: center;
+}
 /*======================= V2 css ==========================*/
 /*Checkbox RTL error*/
 [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
