Changes on frontend booking, fixed host on dropdown not showing

--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -545,7 +545,9 @@ small.small {
     -ms-border-radius: 50%;
     border-radius: 50%;
 }
-
+.bg-black{
+	background: #000;
+}
 /*======================= V2 css ==========================*/
 /*Checkbox RTL error*/
 [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
