Added align-right class for text allignment

--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -649,7 +649,9 @@ small.small {
 #btc_table table tr:nth-child(odd){
 	background: #f8f8f8;
 }
-
+.align-right{
+	text-align: right;
+}
 
 
 /*Media Queries*/
